Added trading stations and GUI

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -10,5 +10,6 @@
   "item.civilizations.blank_papyrus": "Blank Papyrus",
   "item.civilizations.papyrus": "Papyrus",
   "itemgroup.civilizations": "Civilizations Mod",
-  "entity.civilizations.egypt_civilian": "Egyptian"
+  "entity.civilizations.egypt_civilian": "Egyptian",
+  "block.civilizations.trading_station": "Trading Station"
 }
