--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -11,5 +11,6 @@
   "item.civilizations.papyrus": "Papyrus",
   "itemgroup.civilizations": "Civilizations Mod",
   "entity.civilizations.egypt_civilian": "Egyptian",
-  "block.civilizations.trading_station": "Trading Station"
+  "block.civilizations.trading_station": "Trading Station",
+  "block.civilizations.tombstone": "Tombstone"
 }
