Added coffin functionality

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -14,5 +14,7 @@
   "entity.civilizations.egypt_npc": "Egyptian",
   "entity.civilizations.egypt_boss": "Pharaoh Khufu",
   "block.civilizations.trading_station": "Trading Station",
-  "block.civilizations.tombstone": "Tombstone"
+  "block.civilizations.tombstone": "Tombstone",
+  "block.civilizations.coffin_top": "Coffin Top",
+  "block.civilizations.coffin_bottom":"Coffin Bottom"
 }
