Added pharaoh's crook

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -17,7 +17,7 @@
   "block.civilizations.tombstone": "Tombstone",
   "block.civilizations.coffin_top": "Coffin Top",
   "block.civilizations.coffin_bottom": "Coffin Bottom",
-
+  "item.civilizations.egypt_crook": "Pharaoh's Crook",
 
 
 
