Added Curse of Ra effect

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -18,7 +18,7 @@
   "block.civilizations.coffin_top": "Coffin Top",
   "block.civilizations.coffin_bottom": "Coffin Bottom",
   "item.civilizations.egypt_crook": "Pharaoh's Crook",
-
+  "effect.civilizations.curse_of_ra": "Curse of Ra",
 
 
 
