Added chinese paper lantern

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -20,6 +20,8 @@
   "item.civilizations.egypt_crook": "Pharaoh's Crook",
   "effect.civilizations.curse_of_ra": "Curse of Ra",
 
+  "block.civilizations.china_lantern": "Chinese Paper Lantern",
+  "block.civilizations.china_string": "Chinese Lantern String",
 
 
   "advancements.civilizations.title": "Civilizations",
