Added loot tables to china Added chinese battle axe

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -22,7 +22,7 @@
 
   "item.civilizations.china_key": "Chinese Key",
   "item.civilizations.china_key_fragment": "Chinese Key Fragment",
-
+  "item.civilizations.china_battle_axe": "Chinese Battle Axe",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
