Added chinese civilian trading Added drops to chinese guard

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -25,6 +25,7 @@
   "item.civilizations.china_battle_axe": "Chinese Battle Axe",
   "entity.civilizations.china_civilian": "Chinese",
   "entity.civilizations.china_guard": "Chinese Guard",
+  "item.civilizations.china_coin": "Banliang",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
