Added chinese sword

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -26,6 +26,7 @@
   "entity.civilizations.china_civilian": "Chinese",
   "entity.civilizations.china_guard": "Chinese Guard",
   "item.civilizations.china_coin": "Banliang",
+  "item.civilizations.china_sword": "Sword of Goujian",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
