Added chinese boss Made changes to egypt boss

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -27,6 +27,7 @@
   "entity.civilizations.china_guard": "Chinese Guard",
   "item.civilizations.china_coin": "Banliang",
   "item.civilizations.china_sword": "Sword of Goujian",
+  "entity.civilizations.china_boss": "Emperor Qin Shi Huang",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
