Added chinese chest and chinese key

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -34,6 +34,7 @@
   "item.civilizations.autumn_moon_music_disc": "Music Disc",
   "item.civilizations.autumn_moon_music_disc.desc": "Autumn Moon Over Han Palace",
   "subtitles.civilizations.autumn_moon_over_han_palace": "Autumn Moon Over Han Palace",
+  "block.civilizations.china_chest": "Chinese Chest",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
