Added viking boss

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -37,6 +37,7 @@
 
   "item.civilizations.nordic_battle_axe": "Norse Battle Axe",
   "entity.civilizations.nordic_civilian": "Viking",
+  "entity.civilizations.nordic_boss": "King Björn Ironside",
 
   "advancements.civilizations.title": "Civilizations",
   "advancements.civilizations.description": "Welcome to Civilizations",
