Added greek civilian

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -41,7 +41,7 @@
 
   "item.civilizations.greece_key": "Greek Key",
   "block.civilizations.greece_chest": "Greek Chest",
-
+  "entity.civilizations.greece_civilian": "Greek",
 
 
   "filled_map.nordic": "Norse Map",
