--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -42,6 +42,8 @@
   "item.civilizations.greece_key": "Greek Key",
   "block.civilizations.greece_chest": "Greek Chest",
   "entity.civilizations.greece_civilian": "Greek",
+  "entity.civilizations.greece_boss": "Alexander The Great",
+  "item.civilizations.greece_sword": "Kopis",
 
 
   "filled_map.nordic": "Norse Map",
