Added greek civilian trading Added greek coin

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -44,6 +44,7 @@
   "entity.civilizations.greece_civilian": "Greek",
   "entity.civilizations.greece_boss": "Alexander The Great",
   "item.civilizations.greece_sword": "Kopis",
+  "item.civilizations.greece_coin": "Drachma",
 
 
   "filled_map.nordic": "Norse Map",
