Added trading to rome civilians

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -47,6 +47,7 @@
   "item.civilizations.greece_coin": "Drachma",
 
   "entity.civilizations.rome_civilian": "Roman",
+  "item.civilizations.rome_coin": "Denarius Aureus",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
