Added civilians to rome Changed rome structure Added rome key, key fragments and chest

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -48,6 +48,9 @@
 
   "entity.civilizations.rome_civilian": "Roman",
   "item.civilizations.rome_coin": "Denarius Aureus",
+  "item.civilizations.rome_key": "Roman Key",
+  "item.civilizations.rome_key_fragment": "Roman Key Fragment",
+  "block.civilizations.rome_chest": "Roman Chest",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
