--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -51,8 +51,9 @@
   "item.civilizations.rome_key": "Roman Key",
   "item.civilizations.rome_key_fragment": "Roman Key Fragment",
   "block.civilizations.rome_chest": "Roman Chest",
-  "entity.civilizations.rome_boss": "Julius Caesar",
+  "entity.civilizations.rome_boss": "General Julius Caesar",
   "item.civilizations.rome_sword": "Crocea Mors",
+  "entity.civilizations.rome_guard": "Roman",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
