Changed enchanted book

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -55,17 +55,28 @@
   "item.civilizations.rome_sword": "Crocea Mors",
   "entity.civilizations.rome_guard": "Roman",
 
-  "item.civilizations.sharpness_book": "Sharpness IV",
-  "item.civilizations.power_book": "Power III",
-  "item.civilizations.fire_aspect_book": "Fire Aspect II",
-  "item.civilizations.unbreaking_book": "Unbreaking III",
-  "item.civilizations.protection_book": "Protection III",
-  "item.civilizations.feather_falling_book": "Feather Falling III",
-  "item.civilizations.thorns_book": "Thorns II",
-  "item.civilizations.frost_walker_book": "Frost Walker II",
-  "item.civilizations.depth_strider_book": "Depth Strider III",
-  "item.civilizations.efficiency_book": "Efficiency IV",
-  "item.civilizations.fortune_book": "Fortune III",
+  "item.civilizations.sharpness_book": "Enchanted Book",
+  "item.civilizations.power_book": "Enchanted Book",
+  "item.civilizations.fire_aspect_book": "Enchanted Book",
+  "item.civilizations.unbreaking_book": "Enchanted Book",
+  "item.civilizations.protection_book": "Enchanted Book",
+  "item.civilizations.feather_falling_book": "Enchanted Book",
+  "item.civilizations.thorns_book": "Enchanted Book",
+  "item.civilizations.frost_walker_book": "Enchanted Book",
+  "item.civilizations.depth_strider_book": "Enchanted Book",
+  "item.civilizations.efficiency_book": "Enchanted Book",
+  "item.civilizations.fortune_book": "Enchanted Book",
+  "tooltip.civilizations.sharpness_book": "Sharpness IV",
+  "tooltip.civilizations.power_book": "Power III",
+  "tooltip.civilizations.fire_aspect_book": "Fire Aspect II",
+  "tooltip.civilizations.unbreaking_book": "Unbreaking III",
+  "tooltip.civilizations.protection_book": "Protection III",
+  "tooltip.civilizations.feather_falling_book": "Feather Falling III",
+  "tooltip.civilizations.thorns_book": "Thorns II",
+  "tooltip.civilizations.frost_walker_book": "Frost Walker II",
+  "tooltip.civilizations.depth_strider_book": "Depth Strider III",
+  "tooltip.civilizations.efficiency_book": "Efficiency IV",
+  "tooltip.civilizations.fortune_book": "Fortune III",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
