Added loki's necklace Changed achievement layout Added loki core recipe

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -112,6 +112,7 @@
   "item.civilizations.artemis_bow": "Artemis' Bow",
   "item.civilizations.anubis_ankh": "Anubis' Ankh",
   "item.civilizations.mercury_boots": "The Talaria of Mercury",
+  "item.civilizations.loki_necklace": "Loki's Necklace",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
