Added wukong's staff Added wukong core and recipe

--- a/src/main/resources/assets/civilizations/lang/en_us.json
+++ b/src/main/resources/assets/civilizations/lang/en_us.json
@@ -113,6 +113,7 @@
   "item.civilizations.anubis_ankh": "Anubis' Ankh",
   "item.civilizations.mercury_boots": "The Talaria of Mercury",
   "item.civilizations.loki_necklace": "Loki's Necklace",
+  "item.civilizations.wukong_sword": "Ruyi Jingu Bang",
 
   "filled_map.nordic": "Norse Map",
   "filled_map.greece": "Ancient Greek Map",
